<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_alert_description"
        android:layout_marginBottom="10dp"
        />

    <Switch
        android:id="@+id/switchAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_alert_description"
        />

</LinearLayout>